--- a/lisp/lab_02/report/20-practice.tex
+++ b/lisp/lab_02/report/20-practice.tex
@@ -62,7 +62,7 @@
 		
 	\item (list (+ 1 '(length '(1 2 3))))
 	
-	Ошибка,  ибо  '(length '(1 2 3)) не является числом. Необходимо убрать ' и ответ (4).
+	Ошибка,  ибо  '(length '(1 2 3)) не является числом. Убрать ' и ответ (4).
 
 \end{enumerate}
 
@@ -99,6 +99,7 @@
 	(3 FROM 9 LIVES 6)
 	
 	\item (+ (length for 2 too)) (car '(21 22 23)))
+	
 	Ошибка
 	
 	\item (cdr '(cons is short for ans))
